# drift

./: # Drift — Policy für Produkt, Prior.md  .coverage.hybrid-pace-1f3a.pid10180.XGuqaNPx.H14gV70K2PUh  .coverage.hybrid-pace-1f3a.pid10308.XYVPv3Qx.HmHPYn434sXh  .coverage.hybrid-pace-1f3a.pid15080.XNa3WX0x.HbKOM6si2Nbh  .coverage.hybrid-pace-1f3a.pid15140.XIYxfaLx.HL1ZaFe0cYih  .coverage.hybrid-pace-1f3a.pid17060.XiUOP8kx.HK6W1P7Wkz0h  .coverage.hybrid-pace-1f3a.pid2948.Xt76AJ8x.Hn1JqcB0Pboh  .coverage.hybrid-pace-1f3a.pid3520.X8FHMf9x.Hk05f17txBnh  .coverage.hybrid-pace-1f3a.pid3528.XSsNMiTx.HBwmzY3qEj9h  .coverage.hybrid-pace-1f3a.pid5704.X1hqnLdx.Hv1IyE0Cw9oh  .coverage.hybrid-pace-1f3a.pid6396.XzG7gZ3x.HJQJ5YZkFyrh  .coverage.hybrid-pace-1f3a.pid6416.X2z6P3Fx.Hy7L06406bVh  .coverage.hybrid-pace-1f3a.pid7036.Xc9kaB8x.Hkh7iYebc9qh  .coverage.hybrid-pace-1f3a.pid7776.XYsTC8Ex.HmorO7ldpKah  .coverage.hybrid-pace-1f3a.pid8512.XzCf5hOx.HgMNVREdMrjh  .coverage.hybrid-pace-1f3a.pid8616.XNP1e79x.HiNg7hbUHrAh  .coverage.hybrid-pace-1f3a.pid9808.X3bj8KQx.HEWUcpd6t75h  .drift-baseline.json  .drift-intent.yaml  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  .tmp_pr29.diff  Analyse von Drift_ Architektonische Erosion Erkennen.md  BREAKING_CHANGES.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  EPISTEMICS.md  Makefile  POLICY.md  README.md  (+64 more)
.devcontainer/: devcontainer.json
.drift/: bootstrap_feedback.jsonl  feedback.jsonl  np_scan.json
.githooks/: pre-commit  pre-push
.github/: AGENTS.md  CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml  labels.yml  release-drafter.yml  repo-guard.blocklist  repo-root-allowlist  skills-lock.json
Formula/: drift-analyzer.rb
audit_results/: arrow_audit.json  arrow_audit.md  cli_audit.json  cli_audit.md  fault_trees.md  fmea_matrix.md  frappe_audit.json  frappe_audit.md  requests_audit.json  requests_audit.md  risk_register.md  stride_threat_model.md
benchmark_results/: README.md  agent_loop_benchmark_detailed.json  agent_loop_benchmark_severity_gate.json  all_results.json  devto_5repos_evidence.json  drift_self.json  drift_self_full.json  fastapi.json  ground_truth_sample.json  holdout_validation.json  httpx.json  kpi_snapshot.json  kpi_trend.jsonl  mcp_performance_smoke.json  mutation_benchmark.json  nestjs_full.json  paramiko_evidence.json  perf_baseline_latest.json  pwbs_backend.json  pydantic.json  repair_coverage_matrix.json  v0.10.10_feature_evidence.json  v0.10.2_feature_evidence.json  v1.4.0_feature_evidence.json  v1.5.0_feature_evidence.json  v2.10.0_verify_subcommand_feature_evidence.json  v2.12.0_arch_graph_api_feature_evidence.json  v2.14.0_patch_engine_feature_evidence.json  v2.16.0_feature_evidence.json  v2.18.0_feature_evidence.json  v2.18.1_feature_evidence.json  v2.23.0_feature_evidence.json  v2.24.0_feature_evidence.json  v2.25.0_session_handover_gate_feature_evidence.json  v2.26.0_feature_evidence.json  v2.26.2_session_queue_persistence_feature_evidence.json  v2.27.0_fingerprint-v2_feature_evidence.json  v2.28.0_trend_gate_feature_evidence.json  v2.29.0_agent-workflow-shortcuts_feature_evidence.json  v2.29.0_agent_workflow_shortcuts_feature_evidence.json  (+24 more)
benchmarks/: README.md  oracle_repos.json
conda.recipe/: meta.yaml
decisions/: ADR-012-copilot-context-actionability-pfs-nbv.md  ADR-017-dia-false-positive-reduction.md  ADR-018-avs-co-change-precision-hardening.md  ADR-021-batch-dominant-fix-loop-orchestration.md  ADR-023-canonical-examples-in-agent-output.md  ADR-024-next-step-contracts.md  ADR-029-agent-effectiveness-features.md  ADR-030-cod-avs-eds-fp-reduction.md  ADR-035-per-repo-signal-calibration.md  ADR-038-mds-name-distance-and-protocol-awareness.md  ADR-039-activate-agent-safety-signals.md  ADR-039-ast-logical-location.md  ADR-040-phr-import-resolver.md  ADR-040-signal-scoring-promotion-phr-hsc-foe.md  ADR-043-guided-mode-status-setup.md  ADR-046-markdown-output-format.md  ADR-047-fix-plan-tty-rich-output.md  ADR-047-maz-security-tier-rich-output.md  ADR-052-pr-comment-output-format.md  ADR-054-file-discovery-manifest-cache.md  ADR-057-centralized-test-file-detection-and-context.md  ADR-065-repair-template-registry.md  ADR-073-consolidation-opportunity-detector.md  ADR-076-patch-writer-auto-apply.md  ADR-079-session-handover-artifact-gate.md  ADR-089-agent-loop-closure.md  ADR-094-human-approval-gate.md
demos/: README.md  agent-copilot-context.tape  agent-diff.tape  agent-fix-plan.tape  agent-workflow-trailer.tape  agent-workflow.tape  demo.tape  demo_v2120.py
docs/: EPISTEMICS.md  LAUNCH_CHECKLIST.md  MAINTAINER_RUNBOOK.md  OUTREACH.md  PRODUCT_STRATEGY.md  REPOSITORY_GOVERNANCE.md  ROOT_POLICY.md  STUDY.md  drift-architecture-erosion-analysis.md  go-mvp-scope.md  index.md  language-roadmap.md  language-support-matrix.md  migration.md  python-baseline.md  python-rule-inventory.md  session_handover_template.md  tsjs-mvp-scope.md
docs-site/: benchmarking.md  contributing.md  drift-bot.md  faq.md  glossary.md  index.md  integrations.md  product-strategy.md  prove-it.md  roadmap-poll.md  stability.md  start-here.md  trust-evidence.md  what-is-architectural-drift.md
master-backlog/: 00-repo-analysis.md  01-baseline.md  02-manual-steps.md  03-llm-tracking-template.md  04-audience-validation-experiment.md  05-drift-nudge-cold-start.md  06-trend-gate-enforcement.md  07-patch-auto-verify-loop.md  08-vscode-extension-beta.md  09-cross-language-ir.md  10-agent-framework-sdk.md  11-cloud-trend-storage.md  draft-awesome-list-pr.md  draft-devto-article.md  draft-show-hn.md
overrides/: home.html  main.html
playground/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
scripts/: _real_repair_after.py  _real_repair_analyze.py  _show_tasks.py  adversarial_brief_audit.py  benchmark.py  benchmark_agent_loop.py  (+75 more)
(+1282 files in other folders)
